[gd_scene load_steps=4 format=3 uid="uid://cnslx4vw4n2gg"]

[ext_resource type="Script" path="res://scenes/collision_detector/collision_detector.gd" id="1_nt1ji"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1pudd"]
size = Vector2(6, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_we20f"]
size = Vector2(2, 6)

[node name="CollisionDetector" type="Node2D"]
script = ExtResource("1_nt1ji")

[node name="UpArea2D" type="Area2D" parent="."]
collision_layer = 0

[node name="UpCollisionShape2D" type="CollisionShape2D" parent="UpArea2D"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_1pudd")

[node name="RightArea2D" type="Area2D" parent="."]
collision_layer = 0

[node name="RightCollisionShape2D" type="CollisionShape2D" parent="RightArea2D"]
position = Vector2(4, 0)
shape = SubResource("RectangleShape2D_we20f")

[node name="LeftArea2D" type="Area2D" parent="."]
collision_layer = 0

[node name="LeftCollisionShape2D" type="CollisionShape2D" parent="LeftArea2D"]
position = Vector2(-4, 0)
shape = SubResource("RectangleShape2D_we20f")

[node name="DownArea2D" type="Area2D" parent="."]
collision_layer = 0

[node name="DownCollisionShape2D" type="CollisionShape2D" parent="DownArea2D"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_1pudd")

[connection signal="body_entered" from="UpArea2D" to="." method="_on_up_area_2d_body_entered"]
[connection signal="body_exited" from="UpArea2D" to="." method="_on_up_area_2d_body_exited"]
[connection signal="body_entered" from="RightArea2D" to="." method="_on_right_area_2d_body_entered"]
[connection signal="body_exited" from="RightArea2D" to="." method="_on_right_area_2d_body_exited"]
[connection signal="body_entered" from="LeftArea2D" to="." method="_on_left_area_2d_body_entered"]
[connection signal="body_exited" from="LeftArea2D" to="." method="_on_left_area_2d_body_exited"]
[connection signal="body_entered" from="DownArea2D" to="." method="_on_down_area_2d_body_entered"]
[connection signal="body_exited" from="DownArea2D" to="." method="_on_down_area_2d_body_exited"]
